--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/webments/webments-neumorphic.git"
+    "url": "git+https://github.com/webments/paper.css.git"
   },
   "author": "The Webments Authors",
   "license": "LGPL-2.1",
   "style": "./neumorphic.css",
   "bugs": {
-    "url": "https://github.com/webments/webments-neumorphic/issues"
+    "url": "https://github.com/webments/paper.css/issues"
   },
-  "homepage": "https://github.com/webments/webments-neumorphic#readme"
+  "homepage": "https://github.com/webments/paper.css#readme"
 }
