--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -19,16 +19,16 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-  # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
+       - uses: actions/checkout@v2
 
-    - name: Auto Minify
-      uses: nizarmah/auto-minify
+       - name: Auto Minify
+         uses: nizarmah/auto-minify
 
-  # Auto commits minified files to the repository
-  # Ignore it if you don't want to commit the files to the repository 
-    - name: Auto committing minified files
-      uses: stefanzweifel/git-auto-commit-action@v3.0.0
-      with:
-        commit_message: "Automated: Auto Minified CSS files"
-        branch: ${{ github.ref }}
+       # Auto commits minified files to the repository
+       # Ignore it if you don't want to commit the files to the repository 
+       - name: Auto committing minified files
+         uses: stefanzweifel/git-auto-commit-action@v3.0.0
+         with:
+           commit_message: "Automated: Minified CSS files"
+           branch: ${{ github.ref }}
