--- a/.github/workflows/minify-css.yml
+++ b/.github/workflows/minify-css.yml
@@ -24,11 +24,14 @@ jobs:
 
        - name: Auto Minify
          uses: nizarmah/auto-minify@v1.6
+         with:
+          directory: 'dist/css'
 
        # Auto commits minified files to the repository
        # Ignore it if you don't want to commit the files to the repository 
        - name: Auto committing minified files
          uses: stefanzweifel/git-auto-commit-action@v3.0.0
          with:
-           commit_message: "Automated: Minified CSS files"
+           repository: 'dist/css'
+           commit_message: "Automated: Minified JS and CSS files"
            branch: ${{ github.ref }}
