--- a/.github/workflows/minify-css.yml
+++ b/.github/workflows/minify-css.yml
@@ -31,5 +31,5 @@ jobs:
          uses: stefanzweifel/git-auto-commit-action@v3.0.0
          with:
            repository: 'dist/css'
-           commit_message: "Automated: Minified JS and CSS files"
+           commit_message: "Automated: Minified CSS files"
            branch: ${{ github.ref }}
