--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webments-neumorphic",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Webments Neumorphic design library.",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "author": "The Webments Authors",
   "license": "LGPL-2.1",
-  "style": "./dist/css/neumorphic.css",
+  "style": "./dist/css/neumorphic.min.css",
   "bugs": {
     "url": "https://github.com/webments/neumorphic.css/issues"
   },
