--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,8 @@
-assets/footer.png
+assets
 dist/css/neumorphic.css
 .all-contributorsrc
 index.html
 main.css
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
+README.md
